--- a/4_methodology/methodology.tex
+++ b/4_methodology/methodology.tex
@@ -68,7 +68,7 @@ Algoritmo~\ref{alg:overshootEst} descreve um procedimento para estimar $y_{\math
   \caption{\texttt{estimate\_maxPeak\_value} - Estimation of $y_{\mathrm{p}}$ and $k_{\mathrm{p}}$}\label{alg:overshootEst}
 \end{algorithm}
 
-O procedimento basicamente procura o valor de pico máximo na resposta da saída de um sistema, usando o conceito de gradiente para verificar se há um pico. Começamos na primeira amostra do sistema de saída e comparamos as amostras subsequentes, e então continuamos a encontrar o maior pico (com o mesmo sinal de $y_mathrm{ss}$) que é o nosso valor máximo de pico $y_\mathrm{p}$.
+O procedimento basicamente procura o valor de pico máximo na resposta da saída de um sistema, usando o conceito de gradiente para verificar se há um pico. Começamos na primeira amostra do sistema de saída e comparamos as amostras subsequentes, e então continuamos a encontrar o maior pico (com o mesmo sinal de $y_\mathrm{ss}$) que é o nosso valor máximo de pico $y_\mathrm{p}$.
 
 
 %--------------------------------------------------------------------------------
@@ -198,7 +198,7 @@ A verificação de máximo sobressinal consiste basicamente em verificar se a porce
 \subsection{Algoritmo de Verificação de Tempo de Assentamento}
 \label{subsec:settime-alg}
 
-Nesta seção, mostramos nosso algoritmo para verificação de tempo de assentamento, onde usamos o invariante $\hat{k}$ (veja a seção \ref{sec:modformver}). Nossa metodologia, que é ilustrada na Figura\ref{fig:diag1}, fornece verificação de tempo de assentamento em sistemas em malha aberta e fechada; no entanto, os primeiros não apresentam controladores e, consequentemente, os efeitos de FWL não são levados em conta. A primeira etapa consiste em obter os parâmetros de entrada necessários, matrizes de espaço de estados $ A $, $ B $, $ C $ e $ D $ e uma entrada do sistema $ u $, que é seguida por um controlador digital, se um sistema em malha fechada for considerado (\texttt{Step 2}). Então, o tempo de assentamento requerido $t_{\mathrm{sr}}$, a porcentagem $ p $ da região de assentamento e o tempo de amostragem $T_\mathrm{s}$ são definidos (\texttt{Step 4 }), que é seguido por uma implementação de FWL, quando em malha fechada (\texttt{Step 3}). Depois disso, os passos \texttt{A} a \texttt{E} são executados, {\it i.e.}, cálculo do controlador com FWL, se for escolhido em malha fechada (\texttt{Step A}) e valor de estado estacionário ($y_{\mathrm{ss}}$), como descrito em Eq.~\eqref{eq:yss2} (\texttt{Step B}), estimativa dos maiores valores de pico da saída do sistema ($y_{\mathrm{p}}$) e a amostra $k_{\mathrm{p}}$ onde $y_{\mathrm{p}} $ está localizado (\texttt{Step C}) e, finalmente, computação de $\overline{\lambda}$ (\texttt{Step D}), $\overline{c}$ e $\hat{k}$ (\texttt{Step E}).
+Nesta seção, mostramos nosso algoritmo para verificação de tempo de assentamento, onde usamos o invariante $\hat{k}$ (veja a seção \ref{sec:modformver}). Nossa metodologia, que é ilustrada na Figura\ref{fig:diag1}, fornece verificação de tempo de assentamento em sistemas em malha aberta e fechada; no entanto, os primeiros não apresentam controladores e, consequentemente, os efeitos de FWL não são levados em conta. A primeira etapa consiste em obter os parâmetros de entrada necessários, matrizes de espaço de estados $ A $, $ B $, $ C $ e $ D $ e uma entrada do sistema $ u $, que é seguida por um controlador digital, se um sistema em malha fechada for considerado (\texttt{Step 2}). Então, o tempo de assentamento requerido $t_{\mathrm{sr}}$, a porcentagem $ p $ da região de assentamento e o tempo de amostragem $T_\mathrm{s}$ são definidos (\texttt{Step 4 }), que é seguido por uma implementação de FWL, quando em malha fechada (\texttt{Step 3}). Depois disso, os passos \texttt{A} a \texttt{E} são executados, {\it i.e.}, cálculo do controlador com FWL, se for escolhido em malha fechada (\texttt{Step A}) e valor de estado estacionário ($y_{\mathrm{ss}}$), como descrito em Eq.~\eqref{eq:yss} (\texttt{Step B}), estimativa dos maiores valores de pico da saída do sistema ($y_{\mathrm{p}}$) e a amostra $k_{\mathrm{p}}$ onde $y_{\mathrm{p}} $ está localizado (\texttt{Step C}) e, finalmente, computação de $\overline{\lambda}$ (\texttt{Step D}), $\overline{c}$ e $\hat{k}$ (\texttt{Step E}).
 
 %\begin{algorithm}
 %    \caption{Procedure to find the instant $k_\mathrm{r}$}
